--- a/index.html
+++ b/index.html
@@ -12,8 +12,22 @@
         <li>ううう</li>
     </div>
   </header>
-  <div class="header">
-
+  
+  <div class="top-wrapper">
+    <div class="menu-icon">
+        <div class="menu">
+            <img src="icon_113281_64.png">
+            <p>おっさん</p>
+        </div>
+        <div class="menu">
+            <img src="icon_113281_64.png">
+            <p>おっさん</p>
+        </div>
+        <div class="menu">
+            <img src="icon_113281_64.png">
+            <p>おっさん</p>
+        </div>
+    </div>
   </div>
 
 </body>
