--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
         <li>ううう</li>
     </div>
   </header>
-  
+
   <div class="top-wrapper">
     <div class="menu-icon">
+        <div class="menu">
+            <img src="icon_113281_64.png">
+            <p>おっさん</p>
+        </div>
         <div class="menu">
             <img src="icon_113281_64.png">
             <p>おっさん</p>
